# split-reads

./: Cargo.toml  README.md  check.sh
src/: chunkable.rs  fastq.rs  lib.rs  main.rs  maybe_compressed_io.rs  path_type.rs  sam_writer_spec.rs  seekable_chain.rs  seekable_split.rs  split_index.rs  util.rs
src/commands/: get_chunk.rs  index.rs  mod.rs  tell.rs  test_fastq.rs  test_seq_io.rs
src/test_utils/: mod.rs  random_bam.rs
