[package]
name = "split-reads"
version = "0.1.0"
authors = ["Ted Brookings <ted.brookings@googlemail.com"]
edition = "2024"
categories = ["science"]
keywords = ["bioinformatics"]
license = "MIT"
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
bam-builder = "1.1.0"
bisection = "0.1.0"
clap = { version = "4.5.51", features = ["derive"] }
enum_dispatch = "0.3.13"
env = "1.0.1"
env_logger = "0.11.8"
log = "0.4.28"
noodles-bgzf = "0.45.0"
num_cpus = "1.17.0"
rust-htslib = { version = "0.51.0", features = ["curl", "gcs", "s3"] }
seq_io = "0.3.4"
#rust-htslib = { path="../rust-htslib", features = ["curl", "gcs", "s3"] }
serde = { version = "1.0.228", features = ["derive"] }
url = "2.5.7"

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }

[dev-dependencies]
rand = "0.9.2"
rstest = "0.26.1"
tempfile = "3.23.0"
